Update js to jquery

--- a/information.html
+++ b/information.html
@@ -17,32 +17,53 @@
   <link rel="stylesheet" href="style-information.css">
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-  var slideIndex = 1;
-  showSlides(slideIndex);
-  // Next/previous controls
-  function plusSlides(n) {
-    showSlides(slideIndex += n);
-  }
-  // Thumbnail image controls
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-  function showSlides(n) {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    if (n > slides.length) {slideIndex = 1}
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " active";
-  }
+    $(document).ready(function() {
+      var slideIndex = 0;
+      showSlides();
+      
+      function showSlides() {
+        var i;
+        var slides = $(".mySlides");
+        var dots = $(".dot");
+        for (i = 0; i < slides.length; i++) {
+          slides.eq(i).css("display", "none");
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) {
+          slideIndex = 1;
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots.eq(i).removeClass("active");
+        }
+        slides.eq(slideIndex - 1).css("display", "block");
+        dots.eq(slideIndex - 1).addClass("active");
+        setTimeout(showSlides, 5000); // Change image every 5 seconds
+      }
+      // Next/previous controls
+      $(".prev").click(function() {
+        slideIndex--;
+        if (slideIndex < 1) {
+          slideIndex = $(".mySlides").length;
+        }
+        showSlides();
+      });
+      $(".next").click(function() {
+        slideIndex++;
+        if (slideIndex > $(".mySlides").length) {
+          slideIndex = 1;
+        }
+        showSlides();
+      });
+      // Thumbnail image controls
+      $(".dot").click(function() {
+        var slideNumber = $(this).data("slide");
+        slideIndex = slideNumber;
+        showSlides();
+      });
+    });
+
   </script>
 </head>
 
