--- a/FAQ.html
+++ b/FAQ.html
@@ -46,7 +46,7 @@ $( function() {
         <li><a href="FAQ.html">FAQ</a></li>
         <li><a href="calculator.html">CALCULATOR</a></li>
         <li><a href="gallery.html">GALLERY</a></li>
-        <li><a href="contactus.html">CONTACT US</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
         <li></li>
         <li></li>
         <li>
