--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,7 @@
         <a href="FAQ.html">FAQ</a>
         <a href="calculator.html">CALCULATOR</a>
         <a href="gallery.html">GALLERY</a>
-        <a href="contactus.html">CONTACT US</a>
+        <a href="contact.html">CONTACT US</a>
         <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         <a class="icon1"><i class="fa fa-search"></i></a>
       </ul>
