--- a/FAQ.html
+++ b/FAQ.html
@@ -104,7 +104,7 @@ $( function() {
       </div>
       <h3 class="accordion">Best Bonsai for Beginners</h3>
       <div class="panel best-bonsai-for-beginners">
-          <p>When picing your tree it is very important that you pick the correct species. Tropical and sub-tropical tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
+          <p>When picking your tree it is very important that you pick the correct species. Tropical and sub-tropical tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
           <p>Choice #1: Ficus! This is the most popular indoor Bonsai because it is a very resilent tree with very beautiful leaves!</p>
           <p>Choice #2: Dwarf Jade! This is the easiest indoor Bonsai to take care of. The tree is a succulent, and can survive periods of drought due to it storing water in its leaves. </p>
           <p>Choice #3: Juniper! This is the most popular outdoor Bonsai because it stands out against nature and it is very afforable for beginners.</p>
