--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style-calculator.css">
+  <link rel="stylesheet" href="calculator.css">
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
   <script>
@@ -58,7 +58,7 @@
         <ul>
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
-          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="contact.html">CONTACT US</a></li>
@@ -71,7 +71,7 @@
         <div class="topnav" id="myTopnav">
           <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
           <a href="information.html">INFORMATION</a>
-          <a href="FAQ.html">FAQ</a>
+          <a href="faq.html">FAQ</a>
           <a href="calculator.html">CALCULATOR</a>
           <a href="gallery.html">GALLERY</a>
           <a href="contact.html">CONTACT US</a>
