--- a/faq.html
+++ b/faq.html
@@ -149,7 +149,7 @@ $( function() {
   </div>
   <div class="footer2">
     <p class="footer2">
-      Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel . <br>
+      Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
       At Miami University, Oxford, Ohio, USA. <br> 
       &copy; Art of Bonsai, 2023
     </p>
