fix resource section in information.html

--- a/information.html
+++ b/information.html
@@ -194,6 +194,21 @@
 </div>
 </div>
 
+<!-- Resources section-->
+<div class="resource">
+  <div class="content_container">
+    <h2>
+      Here are more resources about bonsai for you to explore:
+    </h2>
+    <a href="https://www.bonsaiempire.com/" class="button">Bonsai Empire</a>
+    <a href="https://bonsaimirai.com/" class="button">Bonsai Mirai</a>
+    <a href="https://www.bonsai-bci.com/" class="button">Bonsai Clubs International</a>
+    <a href="https://www.bonsai-nbf.org/" class="button">The National Bonsai Foundation</a>
+    <a href="https://crataegus.com/" class="button">Crataegus Bonsai</a>
+    <p>Image sources: <a href="https://unsplash.com/">Unsplash</a> and <a href="https://www.pexels.com/">Pexels</a></p>
+  </div>
+</div>
+
   <button onclick="topFunction()" id="top" title="Go to top">Top</button> <!-- Button to scroll to top-->
   <footer class="footer">
     <div class="footer1">
